// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> renders properly 1`] = `
.c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  position: relative;
  margin: 40px 0;
}

.c2 {
  width: 100%;
  padding: 0 0 0 20px;
  font-size: 26px;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  width: 100%;
  padding: 20px;
  background: transparent;
  outline: none;
  border-radius: 50px;
  font-size: 18px;
  border: 1px solid;
  opacity: 0.7;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: black;
  z-index: 4;
  border-radius: 10px;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1);
  margin: 20px 0 0 0;
}

.c5 {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 20px;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: rgba(255,255,255,0.1);
}

.c6 {
  font-size: 16px;
  margin: 0 0 5px;
  font-weight: 600;
}

.c7 {
  font-size: 14px;
  margin: 0%;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
              />
            </svg>
            <input
              autocomplete="off"
              class="c3"
              placeholder="search.searchForPosts"
              type="text"
            />
          </div>
          <div
            class="c4"
            data-testid="search-results"
          >
            <a
              class="c5"
              data-testid="search-results-link"
              href="/como-migrar-para-o-windows-8-1/"
            >
              <h3
                class="c6"
                data-testid="search-results-title"
              >
                Como migrar para o Windows 8.1 a partir de uma nova instalação do Windows 8
              </h3>
              <p
                class="c7"
                data-testid="search-results-description"
              >
                 ·
                 
                Quem já precisou formatar um PC e acabou caindo no Windows 8 sabe como é uma dor de cabeça realizar o upgrade para o Windows 8.1.
              </p>
            </a>
            <a
              class="c5"
              data-testid="search-results-link"
              href="/enviando-aplicacao-heroku-windows/"
            >
              <h3
                class="c6"
                data-testid="search-results-title"
              >
                Enviando sua aplicação para o Heroku no Windows
              </h3>
              <p
                class="c7"
                data-testid="search-results-description"
              >
                 ·
                 
                Quem nunca precisou colocar aquela aplicação em produção para testar ou até mesmo compartilhar com colegas e ficou impedido por não ter um servidor bom para uso gratuito?
              </p>
            </a>
            <a
              class="c5"
              data-testid="search-results-link"
              href="/atualizando-programas-cask-homebrew-macos/"
            >
              <h3
                class="c6"
                data-testid="search-results-title"
              >
                Atualizando todos seus casks via Homebrew no macOS
              </h3>
              <p
                class="c7"
                data-testid="search-results-description"
              >
                 ·
                 
                Uma dica simples para forçar a atualização de todos seus casks via HomeBrew
              </p>
            </a>
          </div>
        </div>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Search /> renders properly with results closed 1`] = `
.c0 {
  max-width: 800px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  position: relative;
  margin: 40px 0;
}

.c2 {
  width: 100%;
  padding: 0 0 0 20px;
  font-size: 26px;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  width: 100%;
  padding: 20px;
  background: transparent;
  outline: none;
  border-radius: 50px;
  font-size: 18px;
  border: 1px solid;
  opacity: 0.7;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c3:focus {
  opacity: 1;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: black;
  z-index: 4;
  border-radius: 10px;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1);
  margin: 20px 0 0 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
              />
            </svg>
            <input
              autocomplete="off"
              class="c3"
              placeholder="search.searchForPosts"
              type="text"
            />
          </div>
          <div
            class="c4"
            data-testid="search-results"
          />
        </div>
      </main>
    </section>
  </div>
</body>
`;
